[Fix] Chat tags hovering the escort button on small resolutions (closes #3267)

--- a/assets/less/modules/forum.less
+++ b/assets/less/modules/forum.less
@@ -681,7 +681,7 @@ hordes-twino-editor {
     }
 
     .forum-button-bar, .lightbox {
-      margin: 0; padding: 5px; column-gap: 4px; row-gap: 4px;
+      margin: 0; padding: 2px; column-gap: 4px; row-gap: 4px;
       background: rgba(150, 100, 55, 0.2); backdrop-filter: blur(10px); border-radius: 4px;
       border: 1px solid @myhordes-box-color; box-shadow: 0 0 3px black;
     }
